# application-streamer

./: Cargo-dev.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile  mousetest.html  package-lock.json  package.json  tsconfig.json  webpack.config.mjs
application-streamer/: Cargo.toml  Dockerfile
application-streamer/src/: input_map.rs  input_streamer.rs  input_writer.rs  lib.rs  main.rs
application-streamer/src/stream/: ffmpeg_stream.rs  mod.rs  video_file.rs  xvfb.rs
application-streamer/src/xvfb/: mod.rs  xvfb.rs  xvfb_user.rs
moq-karp/: Cargo.toml
moq-karp/src/: broadcast.rs  client.rs  debug.rs  input.rs  lib.rs  main.rs  server.rs
moq-karp/src/cmaf/: import.rs
moq-web/src/demo/: index.html
moq-web/src/publish/: backend.rs
moq-web/src/watch/: backend.rs  frontend.rs  index.tsx  renderer.rs  ui.tsx
mp4-atom/src/: any.rs  atom.rs  atom_ext.rs  buf.rs  coding.rs  emsg.rs  error.rs  free.rs  ftyp.rs  header.rs  io.rs  mdat.rs  styp.rs  types.rs
mp4-atom/src/moof/: mfhd.rs  mod.rs
mp4-atom/src/moof/traf/: mod.rs  tfdt.rs  tfhd.rs  trun.rs
mp4-atom/src/moov/: mod.rs  mvhd.rs
mp4-atom/src/moov/mvex/: mehd.rs  mod.rs  trex.rs
mp4-atom/src/moov/trak/: mod.rs  tkhd.rs
mp4-atom/src/moov/trak/edts/: elst.rs  mod.rs
mp4-atom/src/moov/trak/mdia/: hdlr.rs  mdhd.rs  mod.rs
mp4-atom/src/moov/udta/: mod.rs  skip.rs
mp4-atom/src/test/: av1.rs  bbb.rs  esds.rs  h264.rs  hevc.rs  vp9.rs
mp4-atom/src/tokio/: any.rs  atom.rs  header.rs  mod.rs
stream-deliverer/: Cargo.toml
stream-deliverer/src/: index.ts  lib.rs  service.ts
stream-deliverer/src/docker/: container.rs
stream-deliverer/src/pages/: index.html  setup.html  setup.ts
stream-deliverer/src/server/: api.ts  docker.ts  server.ts  stream.ts  streamManager.ts
stream-deliverer/src/streams/: docker.rs  instance.rs  manager.rs  mod.rs
stream-deliverer/src/watch/: backend.rs  frontend.rs  index.tsx  renderer.rs  ui.tsx
(+34 files in other folders)
