[package]
name = "application-streamer"
version = "0.1.0"
edition = "2024"

[dependencies]
moq-karp = { version = "0.15.0", path = "../moq-karp" }
moq-native = { version = "0.6", path = "../moq-native" }

tokio = "1.43.0"

phf = { version = "0.11", features = ["macros"] }

# Error handling
anyhow = { version = "1", features = ["backtrace"] }
url = "2.5.4"
tracing = "0.1.41"